# mnemonic

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  INTEGRATION.md  SEARCH.md  TESTING.md
docs/rfcs/active/: RFC-CODETREE.md
hook/: mnemonic-hook.sh  post-commit-codetree.sh
npm/: README.md  package.json
scripts/: build-npm.sh
src/: codetree.rs  config.rs  embeddings.rs  lib.rs  main.rs  models.rs  observer.rs  project.rs  search.rs  server.rs  store.rs  sync.rs
src/queries/: javascript-tags.scm
tests/: codetree_test.rs  integration.rs  rfc_upgrade_tests.rs
