[package]
name = "mnemonic"
version = "2.0.3"
edition = "2021"
description = "State-of-the-art memory engine for AI coding agents. Bi-temporal knowledge graph, RRF search, composite scoring, memory decay, entity resolution. CLI + MCP dual-mode."
license = "Apache-2.0"
repository = "https://github.com/Aamirofficiall/mnemonic"
keywords = ["mcp", "memory", "ai", "agent", "embeddings"]
categories = ["development-tools", "database"]

[[bin]]
name = "mnemonic"
path = "src/main.rs"

[lib]
name = "mnemonic"
path = "src/lib.rs"

[dependencies]
# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# SQLite with bundled (includes FTS5 by default)
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# HTTP client for Gemini API (embeddings + fact extraction)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

# Logging (to stderr — stdout reserved for MCP JSON-RPC)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config file parsing
toml = "0.8"

# Code tree: tree-sitter parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
npezza93-tree-sitter-swift = "0.4"
sha2 = "0.10"

# walkdir for recursive file scanning
walkdir = "2"
streaming-iterator = "0.1"

# Cloud sync (optional — only compiled with --features sync)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

[features]
default = []
sync = ["dep:aws-sdk-s3", "dep:aws-config"]

[dev-dependencies]
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
